src/css/modal.css
.modal-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

.modal-wrapper__contents {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 60%;
  width: 40%;
  padding: 20px 25px;
  border-radius: 20px;
  background-color: rgb(235, 235, 235);
  z-index: 2;
}

.modal-wrapper__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgb(255, 255, 255, 0.7);
  cursor: pointer;
}

.modal-wrapper__contents h2 {
  font-size: 35px;
  margin: 20px 0px;
}

.arr {
  margin-bottom: 50px;
  font-size: 18px;
}

.myLink {
  display: flex;
  flex-direction: column;
  margin-bottom: 30px;
}

.myLink h3 {
  font-size: 18px;
  font-weight: 600;
  opacity: 0.6;
}

.myLink a {
  font-size: 17px;
}

.refLink h3 {
  font-size: 18px;
  font-weight: 600;
  opacity: 0.6;
}

.refLink ul {
  list-style: none;
  padding: 0;
}

.refLink li {
  margin-top: 6px;
  font-size: 17px;
}

